# HJB-stat-quad-dual-FP-propagation

./: CMakeLists.txt  Checkinitialalpha.m  Checkqandr.m  ChkPsi.m  D_sigma_s.m  GetPhialpha0psi.m  GetalpPhinlpsiTbar.m  Getalpha0psiTbar.m  GetalphaPhifuncnl.m  GetalphaPhifuncnlpsi.m  Getalphafuncnl.m  Getalphafuncnls3.m  LICENSE  N_tilde.cpp  Ntildeviafxdpt.m  Pontryagin.tex  Watoneypoint.m  backsubchkofW.m  backsubchkofWndim.m  backsubsalpnlTbar.m  checkstat.m  chkderwrtT.m  eqn_6_10.m  eqn_A_bar.m  eqn_P_Psi.m  etainverse.m  extendfixedptalp.m  funcforstatchk.m  getDs.m  getPhiT.m  getdalpTdTnlpsiTbar.m  gettheta.m  gradeta.m  gradtheta.m  intonrhsofetaofalp.m  lxlpalpnlpsiTbndim.m  lxlpalpnlpsiTbndims1.m  lxlpropalpnlpsiTbar.m  main.m  newtonforeta.m  (+24 more)
MATLAB/: D_sigma_s.m  backsubsalpnlTbar.m  eqn_P_Psi.m  gettheta.m  gradeta.m  main.m  newtonforeta.m  propalpnlpsiTbndim.m  qrintegrals.m  readme.md
cpp_python/: readme.md  solver.cpp  solvers.h
